# ragapp

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  agents-docker-compose.yml  default.env  docker-compose.manager.yml  docker-compose.yml  entrypoint.sh  main.py  package.json  pnpm-lock.yaml  pyproject.toml
create_llama/backend/: .gitignore  main.py  pyproject.toml
create_llama/backend/app/: settings.py
create_llama/backend/app/api/routers/: chat.py  events.py  models.py
create_llama/backend/app/engine/: __init__.py  generate.py  index.py  tools.py  vectordb.py
create_llama/backend/app/engine/loaders/: __init__.py  db.py  file.py  web.py
create_llama/backend/app/engine/tools/: __init__.py  interpreter.py  openapi_action.py
create_llama/backend/app/engine/vectordbs/: qdrant.py
create_llama/backend/config/: tools.yaml
create_llama_local/backend/: README.md  main.py  pyproject.toml
create_llama_local/backend/app/: settings.py
create_llama_local/backend/app/api/routers/: chat.py  messaging.py  vercel_response.py
create_llama_local/backend/app/engine/: __init__.py  generate.py  index.py  vectordb.py
create_llama_local/backend/app/engine/loaders/: __init__.py  db.py  file.py  web.py
create_llama_local/backend/app/engine/tools/: __init__.py  weather.py
src/control_plane/: Dockerfile  main.py  pyproject.toml
src/manager/: .dockerignore  Dockerfile  Makefile  README.md  docker-compose.manager.yml  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
src/manager/app/: constants.py  docker_client.py  settings.py  utils.py
src/manager/app/controllers/: setup.py
src/manager/app/models/: docker_service.py  ragapp.py  volume.py
src/manager/app/routers/: services.py
src/manager/app/services/: __init__.py  app.py  app_config.py  app_data.py  container.py
src/manager/app/tasks/: init_apps.py
src/manager/frontend/: .gitignore  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts
src/manager/frontend/src/app/: layout.tsx  page.tsx
src/manager/frontend/src/client/: service.ts  util.ts
src/manager/frontend/src/client/models/: service.ts
src/manager/frontend/src/components/: admin-dashboard.tsx
src/manager/frontend/src/components/sections/: createAgent.tsx  services.tsx  sidebar.tsx
src/manager/frontend/src/components/ui/: alert-dialog.tsx  card.tsx  dialog.tsx  form.tsx  icons.tsx  tooltip.tsx
src/ragapp/: .gitignore  Dockerfile  Makefile  entrypoint.sh  main.py  pyproject.toml
src/ragapp/admin/: next.config.mjs  pnpm-lock.yaml
src/ragapp/admin-ui/: package.json  pnpm-lock.yaml
src/ragapp/admin-ui/client/: agent.ts  chatConfig.ts  reindexFiles.ts  s3Config.ts
src/ragapp/admin-ui/client/providers/: azure.ts  gemini.ts  index.ts  ollama.ts
src/ragapp/admin-ui/client/tools/: code_generator.ts  document_generator.ts  duckduckgo.ts  image_generator.ts  interpreter.ts  openapi.ts  query_engine.ts  wikipedia.ts
src/ragapp/admin-ui/components/ui/: button.tsx  dialog.tsx  form.tsx  tabs.tsx  toast.tsx  toaster.tsx
src/ragapp/admin-ui/components/ui/custom/: expandableSection.tsx  submitButton.tsx
src/ragapp/admin-ui/pages/: index.tsx
src/ragapp/admin-ui/sections/: footer.tsx  statusBar.tsx
src/ragapp/admin-ui/sections/config/: agent.tsx  chat.tsx  fileLoader.tsx  model.tsx  s3Config.tsx
src/ragapp/admin-ui/sections/config/agents/: AgentTabContent.tsx  AgentTabList.tsx  CreateAgentPopup.tsx  RemoveAgentDialog.tsx  SingleAgentContent.tsx  ToolConfig.tsx  ToolsConfig.tsx
src/ragapp/admin-ui/sections/config/providers/: azureOpenai.tsx  gemini.tsx  groq.tsx  mistral.tsx  ollama.tsx
src/ragapp/admin-ui/sections/config/tools/: image_generator.tsx  interpreter.tsx  openapi.tsx
src/ragapp/admin-ui/styles/: globals.css
src/ragapp/admin/client/: chatConfig.ts
src/ragapp/admin/client/tools/: openapi.ts  wikipedia.ts
src/ragapp/admin/components/ui/: tooltip.tsx
src/ragapp/admin/components/ui/custom/: expandableSection.tsx
src/ragapp/admin/sections/: knowledge.tsx
src/ragapp/admin/sections/config/: fileLoader.tsx  llamacloud.tsx
src/ragapp/admin/sections/config/providers/: openai.tsx
src/ragapp/admin/sections/config/tools/: openapi.tsx
src/ragapp/backend/: constants.py  database.py  middleware.py
src/ragapp/backend/agents/: multi.py  orchestrator.py  planner.py  single.py
src/ragapp/backend/controllers/: agent_prompt_manager.py  agents.py  chat_request.py  env_configs.py  files.py  loader.py  request.py  system_prompt.py  tools.py
src/ragapp/backend/engine/: __init__.py  constants.py  engine.py  index.py  query_filters.py  vectordb.py
src/ragapp/backend/engine/postprocessors/: __init__.py  node_citation.py  reranker.py
src/ragapp/backend/engine/vectordbs/: chroma.py  qdrant.py
src/ragapp/backend/middlewares/: rate_limit.py
src/ragapp/backend/models/: agent.py  base_env.py  chat_config.py  file.py  jwt.py  llamacloud_config.py  loader.py  model_config.py  reranker_config.py  s3_config.py  user_info.py
src/ragapp/backend/models/orm/: __init__.py  chat_request.py
src/ragapp/backend/models/tools/: __init__.py  code_generator.py  document_generator.py  duckduckgo.py  image_generator.py  interpreter.py  openapi.py  query_engine.py  wikipedia.py
src/ragapp/backend/routers/chat/: index.py  old_vercel_response.py  vercel_response.py
src/ragapp/backend/routers/management/: __init__.py  agents.py  config.py  files.py  llamacloud.py  loader.py  reranker.py  tools.py
src/ragapp/backend/services/: user_chat_service.py
src/ragapp/backend/tasks/: indexing.py
src/ragapp/backend/tests/: test_agent_manager.py  test_engine.py  test_index_config.py  test_request_limit_middleware.py  utils.py
src/ragapp/backend/workflows/: multi.py  orchestrator.py  planner.py  single.py
src/ragapp/config/: .env  agents.yaml  loaders.yaml  tools.yaml
src/ragapp/patch/backend/app/engine/: generate.py  (+4 more)
src/ragapp/patch/frontend/: next.config.mjs
src/ragapp/patch/frontend/app/: globals.css
src/ragapp/templates/: financial_analyst.yaml  reporter.yaml  researcher.yaml
(+352 files in other folders)
